tests/src/frontend/syntax/invalid/trait_final_constructor.sk
trait MyTrait final (x: Int)
